# Campus_second-hand_trading_platform

./: .gitignore  README.md  api.md  login_token_20250614_170840.txt  register_request_20250614_170134.json  test_ban_module.ps1
backend/python/: .env  FastAPI_SQLAlchemy_商品CRUD指南.md  README.md  commodity_data.py  examples.py  main.py  pyproject.toml  tags.txt
backend/python/app/: main.py
backend/python/app/api/: deps.py
backend/python/app/core/: config.py  database.py
backend/python/app/crud/: commodity.py
backend/python/app/lib/: Tokenization.py  get_embedding.py  text_embedding.py
backend/python/app/models/: base.py  commodity.py  user.py
backend/python/app/schemas/: AddCartRequest.py  BuyCommodityRequest.py  ClickCommodityRequest.py  Response.py  SearchCommodityRequest.py  UploadCommodityRequest.py  commodity.py  register_Request.py
backend/python/app/stopwords/: customed_dict.txt  keywords_only.txt
backend/python/app/test_file/: clear_user_embeddings.py  create_embeddings.py  create_user_embeddings.py  test_embedding_recommendations.py  test_embeddings.py  test_get_embedding.py  向量库集合结构.md
backend/python/embedding_folder/: chroma.sqlite3
backend/python/embedding_recommendation/: create_tags_vector.py  download_model.txt  embedding_client.py  mt.py  recommendation.py  tags.txt  tags_1.txt  test_chromadb.py  test_jieba.py  test_tags_search.py  向量库集合结构.md
backend/python/embedding_recommendation/m_test_db/: chroma.sqlite3
backend/python/embedding_recommendation/stopwords/: customed_dict.txt  stopwords.txt
docs/: name.txt  (+1 more)
mcp/: pyproject.toml  qwen3_mcp_apply.py  webUI.py
mcp/server/sql-mcp-server/: README.md  __init__.py  config.py  database.py  main.py  server.py
mcp/sql-mcp-server/: config.py  tools.py
mcp/workspace/tools/code_interpreter/: students.db  (+2 more)
(+521 files in other folders)
