[project]
name = "python"
version = "0.1.0"
description = "Intelligent Recommendation System with Qwen3 Embedding"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.51.0",
    "sentence-transformers>=2.7.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0"
]
