[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "jieba>=0.42.1",
    "load-dotenv>=0.1.0",
    "openai>=1.86.0",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
]
