[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "gguf>=0.17.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "load-dotenv>=0.1.0",
    "modelscope>=1.27.0",
    "openai>=1.86.0",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.7.0",
    "sqlalchemy>=2.0.41",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
]
